Use ModLabs release for pinned JCEF binaries